# disk2pi

./: LICENSE  UV_USAGE.md  main.py  pyproject.toml
src/disk2pi/: main.py
src/overlay/: overlay.py
src/utils/: __init__.py  audio_utils.py  image_utils.py  pdf_utils.py  video_utils.py
src/viewer/: pdf_viewer.py
