[project]
name = "disk2pi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg>=1.4",
    "pillow>=12.1.1",
    "pydub>=0.25.1",
    "pypdf2>=3.0.1",
    "pyqt5>=5.15.11",
    "python-vlc>=3.0.21203",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
